ConcComp/GameOfLife/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:06:06 **** Clean-only build of configuration Default for project Game-of-Life ****
xmake clean 
/Applications/XMOS_xTIMEcomposer_Community_14.3.3/build/xcommon/module_xcommon/build/../build/Makefile.common1:659: *** Multiple copies of lib_gpio found: /Users/AaronRobey/Repos/CompSciWork/CompSciWork/ConcComp/GameOfLife/COMS20001/lib_gpio /Users/AaronRobey/game-of-life-ws/lib_gpio//Users/AaronRobey/Repos/CompSciWork/CompSciWork/ConcComp/GameOfLife/COMS20001/lib_gpio /Users/AaronRobey/game-of-life-ws/lib_gpio.  Stop.
xmake: *** [clean_common] Error 2
14:07:11 **** Build of configuration Default for project Game-of-Life ****
xmake all 
Checking build modules
WARNING: Required version of lib_xassert is >=2.0.0 and actual version has greater major version: 3.0.0. There could be API incompatibilities.
Using build modules: lib_gpio(1.1.0) lib_i2c(3.0.0) lib_logging(2.0.0) lib_xassert(3.0.0)
Analyzing pgmIO.c
Analyzing debug_printf.c
Analyzing main.xc
../src/main.xc:93:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/main.xc:200:7: error: redefinition of 'read'
  int read;
      ^~~~
../src/main.xc:198:7: note: previous definition of 'read' was here
  int read;
      ^~~~
../src/main.xc:277:18: error: use of undeclared identifer `pauseRound'
            t :> pauseRound;
                 ^
../src/main.xc:198:7: warning: unused variable `read' [-Wunused-variable]
  int read;
      ^~~~
../src/main.xc:353:7: warning: unused variable `tilted' [-Wunused-variable]
  int tilted = 0;
      ^~~~~~
../src/main.xc:441:77: error: use of undeclared identifer `c_gpio'
    on tile[0] : gpio_handler(i_explorer_buttons[0], i_explorer_buttons[1], c_gpio); //Handler thread handling IO data
                                                                            ^
xmake[1]: *** [.build/src/main.xc.pca.xml.decouple] Error 1
xmake: *** [analyze] Error 2
14:08:15 **** Incremental Build of configuration Default for project Game-of-Life ****
xmake all 
Checking build modules
WARNING: Required version of lib_xassert is >=2.0.0 and actual version has greater major version: 3.0.0. There could be API incompatibilities.
Using build modules: lib_gpio(1.1.0) lib_i2c(3.0.0) lib_logging(2.0.0) lib_xassert(3.0.0)
Analyzing main.xc
../src/main.xc:93:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/main.xc:353:7: warning: unused variable `tilted' [-Wunused-variable]
  int tilted = 0;
      ^~~~~~
../src/main.xc:441:77: error: use of undeclared identifer `c_gpio'
    on tile[0] : gpio_handler(i_explorer_buttons[0], i_explorer_buttons[1], c_gpio); //Handler thread handling IO data
                                                                            ^
xmake[1]: *** [.build/src/main.xc.pca.xml.decouple] Error 1
xmake: *** [analyze] Error 2
14:08:34 **** Incremental Build of configuration Default for project Game-of-Life ****
xmake all 
Checking build modules
WARNING: Required version of lib_xassert is >=2.0.0 and actual version has greater major version: 3.0.0. There could be API incompatibilities.
Using build modules: lib_gpio(1.1.0) lib_i2c(3.0.0) lib_logging(2.0.0) lib_xassert(3.0.0)
Analyzing main.xc
../src/main.xc:93:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/main.xc:353:7: warning: unused variable `tilted' [-Wunused-variable]
  int tilted = 0;
      ^~~~~~
Analyzing i2c_master.xc
Analyzing i2c_master_async.xc
/Users/AaronRobey/Repos/CompSciWork/CompSciWork/ConcComp/GameOfLife/COMS20001/lib_i2c/src/i2c_master_async.xc:126:26: warning: argument 1 of `i2c_master_async_aux' slices interface preventing analysis of its parallel usage [-Wunusual-code]
    i2c_master_async_aux(i, n, i2c_dist[0], max_transaction_size);
                         ^
Analyzing i2c_master_ext.xc
Analyzing i2c_master_single_port.xc
Analyzing i2c_slave.xc
Propagating analysis
Creating dependencies for i2c_slave.xc
Creating dependencies for i2c_master_ext.xc
Creating dependencies for i2c_master.xc
Creating dependencies for main.xc
Creating dependencies for debug_printf.c
Creating dependencies for pgmIO.c
Compiling pgmIO.c
Compiling debug_printf.c
Compiling main.xc
../src/main.xc:93:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
../src/main.xc:353:7: warning: unused variable `tilted' [-Wunused-variable]
  int tilted = 0;
      ^~~~~~
Compiling i2c_master.xc
Compiling i2c_master_single_port.xc
Creating game_of_life.xe
Build Complete
